basic pipe in clients

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
   <nab-shell></nab-shell>
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=Intl.~locale.en"></script>
 </body>
 </html>
